# Math5600_Final

./: CMakeLists.txt  gaussian_elimination.cpp  mod_newton.cpp  third_derivative.cpp
